# blaze

./: .gitignore  CMakeLists.txt  Decomps.cpp  README.md  about.md  changelog.md  geobuild.py  mod.json  optimization.md
.github/workflows/: multi-platform.yml
src/: TaskTimer.cpp  TaskTimer.hpp  alpha.cpp  alpha.hpp  bench.cpp  ccimageext.cpp  ccimageext.hpp  crc32.cpp  formats.cpp  formats.hpp  fpff.cpp  fpff.hpp  main.cpp  manager.cpp  manager.hpp  settings.cpp  settings.hpp  tracing.cpp  tracing.hpp  util.cpp  util.hpp
src/algo/: alpha.cpp  alpha.hpp  base64.cpp  base64.hpp  compress.cpp  compress.hpp  crc32.cpp  crc32.hpp  xor.cpp  xor.hpp
src/hooks/: CCApplication.cpp  CCFileUtils.cpp  CCImage.cpp  CCSpriteBatchNode.cpp  CCSpriteFrameCache.cpp  CCSpriteFrameCache.hpp  CCString.cpp  CCTextureCache.cpp  CCTextureCache.hpp  FMODAudioEngine.cpp  FMODAudioEngine.hpp  GJBaseGameLayer.cpp  GameManager.cpp  LoadingLayer.cpp  ZipUtils.cpp  base64.cpp  load.cpp  load.hpp  load.mm
src/hooks/load/: glfw.cpp  glfw.hpp  spriteframes.cpp  spriteframes.hpp
src/util/: assert.hpp  hash.cpp  hash.hpp  memory.cpp  memory.hpp  memory_chunk.cpp  memory_chunk.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp
